# reddit-lead-monitor

./: .env.example  .gitignore  README.md  pyproject.toml
config/: lead_rules.json
extension/: background.js  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
reddit_leads/: __init__.py  ai.py  config.py  db.py  notifications.py  scoring.py  web.py  worker.py
tests/: conftest.py  test_ai.py  test_db.py  test_scoring.py  test_web.py  test_worker.py
